﻿$Revision$
	$Author$ $Date$
	1. для hotkey в диалоге настроек схем отображался неверный combobox 

#Revision: 1731
	#Author: ctapmex Date: 2011-07-04 14:35:15 +0600 (Пн, 04 июл 2011)
	1. незакрыт хэндл 

#Revision: 1730
	#Author: ctapmex Date: 2011-07-04 12:37:36 +0600 (Пн, 04 июл 2011)
	1. откат 1711. 

#Revision: 1729
	#Author: ctapmex Date: 2011-07-04 12:00:45 +0600 (Пн, 04 июл 2011)
	1. некоторые оптимизации

#Revision: 1728
	#Author: ctapmex Date: 2011-07-04 11:24:47 +0600 (Пн, 04 июл 2011)
	1. дополнена справка

#Revision: 1727
	#Author: ctapmex Date: 2011-07-03 23:42:29 +0600 (Вс, 03 июл 2011)
	1. поправлено поведение меню выбора типа файлов при добавлении/удалении в "Избранные"
	2. назначение горячих клавиш для элементов меню выбора типа файлов клавишей "F4"

#Revision: 1726
	#Author: ctapmex Date: 2011-07-01 17:45:07 +0600 (Пт, 01 июл 2011)
	1. для параметра FullBack и всех системных параметров схем в списке выбора 
	значений отображались неверные значения.
	2. новое меню выбора типа файлов
	шаг 2: сохранение изменений в группе "Избранное". 
	добавить Ins, удалить Delete

#Revision: 1725
	#Author: ctapmex Date: 2011-07-01 15:38:55 +0600 (Пт, 01 июл 2011)
	1. два новых параметра для типов файлов 
	  - горячая клавиша для меню выбора
	  - помещать ли в в группу "Избранные"
	2. новое меню выбора типа файла
	шаг 1: строится меню из настроек, типы добавляются/удаляются из "Избранные". 
	Но изменения не сохраняются. (настройка через диалог настройки схем).

#Revision: 1723
	#Author: ctapmex Date: 2011-06-30 15:55:21 +0600 (Чт, 30 июн 2011)
	1. ошибка чтения настроек при заданном пути до catalog.xml

#Revision: 1719
	#Author: ctapmex Date: 2011-06-29 09:59:44 +0600 (Ср, 29 июн 2011)
	1. Far3 build 2085 API

#Revision: 1714
	#Author: ctapmex Date: 2011-06-28 13:44:11 +0600 (Вт, 28 июн 2011)
	1. ошибка установки цвета фона редактора

#Revision: 1711
	#Author: ctapmex Date: 2011-06-27 17:26:52 +0600 (Пн, 27 июн 2011)
	1. лишняя прорисовка для пустого региона
